Stop content from overflowing

--- a/www/app.css
+++ b/www/app.css
@@ -51,6 +51,10 @@
     text-align: right;
 }
 
+.content {
+    overflow: auto;
+}
+
 
 
 
